tests/Compilation/negative/test004.juvix
module test004;

open import Stdlib.Prelude;

main : Nat -> Nat;
main x := x;
